--- a/package.json
+++ b/package.json
@@ -13,14 +13,17 @@
   "devDependencies": {
     "@types/jest": "^29.5.12",
     "@types/node": "22.5.4",
+    "aws-cdk": "2.163.1",
+    "esbuild": "^0.24.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.5",
-    "aws-cdk": "2.163.1",
     "ts-node": "^10.9.2",
     "typescript": "~5.6.2"
   },
   "dependencies": {
+    "@types/aws-lambda": "^8.10.145",
     "aws-cdk-lib": "2.163.1",
+    "aws-sdk": "^2.1691.0",
     "constructs": "^10.0.0",
     "source-map-support": "^0.5.21"
   }
