--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
     "typescript": "~5.6.2"
   },
   "dependencies": {
+    "@aws-sdk/client-apigatewaymanagementapi": "^3.679.0",
+    "@aws-sdk/client-dynamodb": "^3.679.0",
+    "@aws-sdk/client-lambda": "^3.680.0",
+    "@aws-sdk/lib-dynamodb": "^3.679.0",
     "@types/aws-lambda": "^8.10.145",
     "aws-cdk-lib": "2.163.1",
     "aws-sdk": "^2.1691.0",
