--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@aws-sdk/client-apigatewaymanagementapi": "^3.679.0",
     "@aws-sdk/client-dynamodb": "^3.679.0",
     "@aws-sdk/client-lambda": "^3.680.0",
+    "@aws-sdk/client-s3": "^3.679.0",
     "@aws-sdk/lib-dynamodb": "^3.679.0",
     "@types/aws-lambda": "^8.10.145",
     "aws-cdk-lib": "2.163.1",
