--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@aws-sdk/client-lambda": "^3.680.0",
     "@aws-sdk/client-s3": "^3.679.0",
     "@aws-sdk/client-ses": "^3.682.0",
+    "@aws-sdk/client-sqs": "^3.687.0",
     "@aws-sdk/client-ssm": "^3.682.0",
     "@aws-sdk/lib-dynamodb": "^3.679.0",
     "@types/aws-lambda": "^8.10.145",
